--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,9 +16,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install .
+        pip install pytest numpy matplotlib  # Instalación explícita de lo básico
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install -e .
         
     - name: Run Algebraic Consistency Tests
       run: |
-        pytest tests/test_algebraic_consistency.py
+        # Usamos 'python -m pytest' que es más seguro que solo 'pytest'
+        python -m pytest tests/test_algebraic_consistency.py
