--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,9 +28,9 @@ dependencies = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/<YOUR_ORG_OR_USER>/mhd-xu-auditor"
-Repository = "https://github.com/<YOUR_ORG_OR_USER>/mhd-xu-auditor"
-"Bug Tracker" = "https://github.com/<YOUR_ORG_OR_USER>/mhd-xu-auditor/issues"
+Homepage = "https://github.com/Jonatan-Mu/mhd-xu-auditor"
+Repository = "https://github.com/Jonatan-Mu/mhd-xu-auditor"
+Issues = "https://github.com/Jonatan-Mu/mhd-xu-auditor/issues"
 
 [project.scripts]
 xu-auditor = "mhd_xu_auditor.cli:main"
