--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,21 +6,25 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.10'
-        
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pytest numpy matplotlib  # Instalación explícita de lo básico
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        pip install -e .
-        
-    - name: Run Algebraic Consistency Tests
-      run: |
-        # Usamos 'python -m pytest' que es más seguro que solo 'pytest'
-        python -m pytest tests/test_algebraic_consistency.py
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then
+            pip install -r requirements.txt
+          else
+            pip install numpy matplotlib pytest
+          fi
+          pip install -e .
+
+      - name: Run tests
+        env:
+          MPLBACKEND: Agg
+        run: |
+          python -m pytest -q
